--- a/app/globals.css
+++ b/app/globals.css
@@ -144,11 +144,11 @@
   } */
 
   /* CSS custom property animation support */
-  @property --angle {
+  /* @property --angle {
     syntax: "<angle>";
     inherits: false;
     initial-value: 0deg;
-  }
+  } */
 
   .movingBorder {
     position: relative;
